src/app/modules/client/components/client-project-edit/client-project-edit.component.scss
path, g {
  fill: #E2E2E2;
  cursor: pointer;
}
g.selected,
path.selected,
.selected g,
.selected path {
  fill: #2ECC71;
}
g.clickable:not(.selected):hover,
path.clickable:not(.selected):hover,
.clickable:not(.selected):hover g,
.clickable:not(.selected):hover path {
  fill: #BBBBBB;
}



$dark-bg: #262831;
$body-font-color-darker: #333333;
$primary-color: #3498DB;



.project-header {
  background: $dark-bg;
  color: white;
  padding-bottom: 84px;

  h1 {
    color: white;
    margin-top: 50px;
  }

  h1::after {
    display: none;
  }

  .title {
    opacity: 0.8;
    font-size: 1.4rem;
    line-height: 44px;
  }

  .metas {
    font-size: 0.8rem;
    color: #878787;
    line-height: 36px;
  }

  ul.step {
    margin-top: 60px;
  }
}

.project-help {
  background: #FAFAFA;
  padding: 40px 0;

  .steps {
    margin: 0;

    li {
      display: inline-block;
      margin-right: 30px;
    }

    span {
      background: $primary-color;
      border-radius: 500px;
      padding: 2px 9px;
      color: white;
      margin-right: 10px;
    }

    i {
      color: $primary-color;
    }
  }
}

.map {
  display: block;
}

.language-choice ul {
  margin: 0;

  li {
    font-size: 1rem;
    color: $body-font-color-darker;
    list-style: none;
    cursor: pointer;
    margin-bottom: 20px;

    span {
      font-size: 0.7rem;
      display: block;
      color: #878787;
    }

    i {
      font-size: 0.8rem;
    }
  }

  li.active {
    color: $primary-color;
  }

}

.help-block {
  background: $dark-bg;
  padding: 50px 40px 30px 40px;
  color: white;

  h3 {
    opacity: 0.6;
    color: #FFFFFF;
    margin-bottom: 25px;
    text-transform: uppercase;
  }

  .divider {
    opacity: 0.2;
    margin: 30px 0;
  }

  .btn {
    width: 100%;
    background: transparent;
    border: 2px solid white;
    color: white;
    margin-bottom: 20px;
  }

  .btn:focus, .btn:hover {
    border-color: $primary-color;
  }
}

.project-submit {
  background: #FAFAFA;
  padding: 90px 0;
  margin-top: 70px;

  .btn {
    margin-top: 30px;
    margin-bottom: 10px;
  }
}


.step-item a {
  pointer: text;
}


.medias {
  display: flex;

  .media {
    background-color: #262931;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 2px;

    &:not(:first-child) {
      margin-left: 10px;
    }

    div {
      padding: 8px 2px;

      a {
        display: block;
        padding-bottom: 4px;
      }
    }
  }
}

.flex-container {
  display: flex;
}

.last-saved {
  padding: 0.45rem 0.5rem;
}

